--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.88MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-6.42MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.42MB/s(Youtube:不良林), server: tx-xg-2.ienai.xin, port: 11000, type: vmess, uuid: 03b188df-f7be-4038-8bc3-ffd2edb2b56a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林), server: v3.ssrsub.com, port: 48443, type: vmess, uuid: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
-  - {name: 🇨🇳 中国-3.71MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.42MB/s(Youtube:不良林), server: 5.183.176.92, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-302.9KB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
+  - {name: 捷克-194.5KB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇭🇰 香港-2.66MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇯🇵 日本-1.47MB/s(Youtube:不良林), server: 5.183.176.93, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-9.77MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇯🇵 日本-1.72MB/s(Youtube:不良林), server: 5.183.176.93, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-870.1KB/s(Youtube:不良林), server: 5.183.176.93, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-574.9KB/s(Youtube:不良林), server: 194.124.35.23, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-335.0KB/s(Youtube:不良林), server: 194.124.35.23, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.25MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
+      - 捷克-194.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.77MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-870.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-574.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-335.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
+      - 捷克-194.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.77MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-870.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-574.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-335.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
+      - 捷克-194.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.77MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-870.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-574.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-335.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-6.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
+      - 捷克-194.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.77MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-870.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-574.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-335.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
+      - 捷克-194.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.77MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-870.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-574.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-335.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
+      - 捷克-194.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.77MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-870.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-574.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-335.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
+      - 捷克-194.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.77MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-870.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-574.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-335.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
