--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.41MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.47MB/s(Youtube:不良林), server: 5.183.176.93, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇭🇰 香港-2.66MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇨🇳 中国-7.16MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-308.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.22MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.48MB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 卢森堡-7.80MB/s(Youtube:不良林), server: 91.243.81.248, port: 28000, type: trojan, password: f5f239fc-d21a-45ba-aeaf-b137d7d730a6, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林), server: v3.ssrsub.com, port: 48443, type: vmess, uuid: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
-  - {name: 🇨🇳 中国-1.69MB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇨🇳 中国-452.0KB/s(Youtube:不良林), server: aiaph1.www.klrxyru.cn, port: 1641, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇨🇳 台湾-7.90MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.37MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.55MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇳 中国-7.12MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.58MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.27MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-618.6KB/s(Youtube:不良林), server: 5.183.176.92, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-366.5KB/s(Youtube:不良林), server: j1.v2.gay, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: j1.v2.gay}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 卢森堡-7.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-618.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 卢森堡-7.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-618.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 卢森堡-7.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-618.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-7.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 卢森堡-7.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-618.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 卢森堡-7.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-618.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 卢森堡-7.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-618.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 卢森堡-7.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-618.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
